--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
 
 ko_fi: zipdot
-custom: https://buymeacoffee.com/zipdot
-custom: https://trakteer.id/zipdot
+custom: ['https://buymeacoffee.com/zipdot', 'https://trakteer.id/zipdot']
